--- a/src/etools/applications/partners/templates/pca/english_pdf.html
+++ b/src/etools/applications/partners/templates/pca/english_pdf.html
@@ -184,7 +184,7 @@
                     Nations established by the General Assembly pursuant to resolution 57(I) of 11 December 1946.
                 </li>
                 <li>“<u>Implementing Partner</u>” or “<u>IP</u>”
-                    means {{ agreement.partner }}, {{ agreement.partner.address }}, {{ agreement.partner.city }}
+                    means {{ agreement.partner }}, {{ agreement.partner.address }}, {{ agreement.partner.city }},
                     {{ agreement.partner.country }} </li>
                 <li>“<u>Programme</u>” means the UNICEF programme for {{ country }},
                     approved by the Executive Board of the United Nations Children’s Fund for the period
