--- a/src/etools/applications/partners/templates/pca/french_pdf.html
+++ b/src/etools/applications/partners/templates/pca/french_pdf.html
@@ -179,7 +179,7 @@
                     fondée par son Assemblée générale conformément à la résolution 57(I) du 11 décembre 1946.
                 </li>
                 <li>«<u>Partenaire d’exécution</u>», ou «IP» (Implementing Partner), désigne
-                    {{ agreement.partner }}, {{ agreement.partner.address }}, {{ agreement.partner.city }} {{ agreement.partner.country }} </li>
+                    {{ agreement.partner }}, {{ agreement.partner.address }}, {{ agreement.partner.city }}, {{ agreement.partner.country }} </li>
                 <li>«<u>Programme de pays</u>» désigne le programme de pays pour le/la {{ country }},
                     validé par le Conseil d’administration du Fonds des Nations Unies pour l’enfance pour la période
                     {{ cp.from_date|date:"Y" }} à {{ cp.to_date|date:"Y" }}, y compris les eventuelles extensions du
