--- a/src/etools/applications/partners/templates/pca/portuguese_pdf.html
+++ b/src/etools/applications/partners/templates/pca/portuguese_pdf.html
@@ -176,7 +176,7 @@
                 </li>
                 <li>“<u>Parceiro de Implementação</u>” ou “<u>PI</u>” significa
                     {{ agreement.partner }}, {{ agreement.partner.address }},
-                    {{ agreement.partner.city }} {{ agreement.partner.country }}
+                    {{ agreement.partner.city }}, {{ agreement.partner.country }}
                 </li>
                 <li>“<u>Programa do País</u>”, significa programa do país do UNICEF para {{ country }},
                     aprovado pela Comissão Executiva do Fundo das Nações Unidas para a Infância para o período de
