--- a/src/etools/applications/partners/templates/pca/russian_pdf.html
+++ b/src/etools/applications/partners/templates/pca/russian_pdf.html
@@ -201,7 +201,7 @@
                     с резолюцией 57(I) от 11 декабря 1946 года.
                 </li>
                 <li><u> «Партнер по реализации программы»</u> или <u>«ПРП»</u>
-                    означает {{ agreement.partner }}, {{ agreement.partner.address }}, {{ agreement.partner.city }} {{ agreement.partner.country }} </li>
+                    означает {{ agreement.partner }}, {{ agreement.partner.address }}, {{ agreement.partner.city }}, {{ agreement.partner.country }} </li>
                 <li><u>«Страновая программа»</u> означает страновая программа ЮНИСЕФ для {{ country }},
                     утвержденную Исполнительным советом Детского фонда Организации Объединенных Наций на срок
                     {{ cp.from_date|date:"Y" }}  {{ cp.to_date|date:"Y" }}, включая любое последующее продление текущей
