--- a/src/etools/applications/partners/templates/pca/spanish_pdf.html
+++ b/src/etools/applications/partners/templates/pca/spanish_pdf.html
@@ -177,7 +177,7 @@
                     57(I) del 11 de diciembre de 1946.
                 </li>
                 <li>“<u>Socio Implementador</u>” o “<u>SI</u>” se refiere a
-                    {{ agreement.partner }}, {{ agreement.partner.address }}, {{ agreement.partner.city }}
+                    {{ agreement.partner }}, {{ agreement.partner.address }}, {{ agreement.partner.city }},
                     {{ agreement.partner.country }}
                 </li>
                 <li>“<u>Programa de País</u>” se refiere al programa de país para {{ country }},
