--- a/src/etools/applications/audit/templates/audit/audit_pdf.html
+++ b/src/etools/applications/audit/templates/audit/audit_pdf.html
@@ -10,8 +10,14 @@
       <table class="content-section__table">
         <tr class="content-section__table__header">
           <td colspan="2">Partner Name</td>
-          <td>{{ serializer.fields.audited_expenditure.label }}</td>
-          <td>{{ serializer.fields.financial_findings.label }}</td>
+          <td colspan="2">{{ serializer.fields.audited_expenditure.label }}</td>
+          <td colspan="2">{{ serializer.fields.financial_findings.label }}</td>
+          {% if engagement.audited_expenditure_local %}
+          <td colspan="2">{{ serializer.fields.audited_expenditure_local.label }}</td>
+          {% endif %}
+          {% if engagement.financial_findings_local %}
+          <td colspan="2">{{ serializer.fields.financial_findings_local.label }}</td>
+          {% endif %}
           <td>{{ serializer.fields.percent_of_audited_expenditure.label }}</td>
           <td>{{ serializer.fields.audit_opinion.label }}</td>
           <td>No. of Financial Findings</td>
@@ -30,8 +36,14 @@
         </tr>
         <tr>
           <td colspan="2">{{ engagement.partner.name }}</td>
-          <td>{{ engagement.audited_expenditure|default_if_none:"0.00"|currency }}</td>
-          <td>{{ engagement.financial_findings|default_if_none:"0.00"|currency }}</td>
+          <td colspan="2">{{ engagement.audited_expenditure|default_if_none:"0.00"|currency }}</td>
+          <td colspan="2">{{ engagement.financial_findings|default_if_none:"0.00"|currency }}</td>
+          {% if engagement.audited_expenditure_local %}
+          <td colspan="2">{{ engagement.audited_expenditure_local|default_if_none:"0.00"|currency }}</td>
+          {% endif %}
+          {% if engagement.financial_findings_local %}
+          <td colspan="2">{{ engagement.financial_findings_local|default_if_none:"0.00"|currency }}</td>
+          {% endif %}
           <td>{{ engagement.percent_of_audited_expenditure|default_if_none:"0.00"|currency }}</td>
           <td>{{ engagement.audit_opinion|default:"-"|title }}</td>
           <td>{{ engagement.financial_finding_set|length }}</td>
