admin tweaks: countries dropdown to include countries with inactive realms; organization search

--- a/src/etools/templates/admin/base_site.html
+++ b/src/etools/templates/admin/base_site.html
@@ -165,7 +165,7 @@
 
 {% block nav-global %}
  <div id="country-select">
-    {% show_country_select user.profile %}
+    {% show_country_select user %}
  </div>
 
 {% endblock %}
