remember user acknowledged terms on pca generate & update pca pdf templates with placeholder

--- a/src/etools/applications/partners/templates/pca/arabic_pdf.html
+++ b/src/etools/applications/partners/templates/pca/arabic_pdf.html
@@ -157,6 +157,7 @@
             <div style="padding-top: 12px;">
                 يوافق {{ agreement.partner }} وصندوق الأمم المتحدة للطفولة (يشار إليهما معاً بـ “الطرفين” ويشار لكل منهما على حدة بـ “الطرف”)، بموجب هذه الاتفاقية على الآتي:
             </div>
+            <div>Terms Acknowledged by {{ agreement.terms_acknowledged_by.first_name }} {{ agreement.terms_acknowledged_by.last_name }}</div>
         </div>
 
         <div id="article-I">
