[ch33084] Update PCA Template

--- a/src/etools/applications/partners/templates/pca/english_pdf.html
+++ b/src/etools/applications/partners/templates/pca/english_pdf.html
@@ -560,9 +560,9 @@
           contravention of this Agreement, including the Programme Document; and
         </p>
         <p>
-          (d) Subject to paragraph 5(c) above, prior Cash Transfer Installments
+          (d) Subject to paragraph 8.5(c) above, prior Cash Transfer Installments
           must have been reported on to UNICEF`s satisfaction in accordance with
-          Article X of this Agreement.
+          Article 10 of this Agreement.
         </p>
       </div>
       <p>
@@ -684,7 +684,7 @@
         the Partner should be deployed by the Partner for implementation of
         another Programme Document, or reassigned. The Partner will promptly
         comply with UNICEF`s decision and in the latter case, the Partner agrees
-        that, notwithstanding the provisions of Article VIII, paragraph 12 above,
+        that, notwithstanding the provisions of paragraph 8.13 above,
         it must upon written instructions by UNICEF transfer ownership of the
         supplies and equipment according to UNICEF`s instructions.
       </p>
@@ -742,10 +742,10 @@
       <p>
         9.3 The Partner will maintain records of supplies and equipment purchased
         from the Cash Transfer or transferred to the Partner in accordance with
-        Article VIII (B) of this Agreement. Detailed inventories will be taken by
-        the Partner and kept for a period of five (5) years after the completion
-        of the last Programme Document or the termination of this Agreement,
-        whichever happens later.
+        paragraphs 8.12 to 8.16 of this Agreement. Detailed inventories will 
+        be taken by the Partner and kept for a period of five (5) years after the
+        completion of the last Programme Document or the termination of this
+        Agreement, whichever happens later.
       </p>
       <p class="strong">10. Reporting Requirements</p>
       <p>
@@ -776,7 +776,7 @@
             accounting system shows which transactions represent the expenditures
             reported for each line on the FACE form. The term "verifiable"
             includes that the expenditures may be confirmed by the records in
-            Article IX.)
+            Article 9.)
           </p>
           <p>
             (ii) will only include those expenditures that are directly
@@ -789,8 +789,8 @@
           </p>
           <p>
             (iv) will not include any expenditures that are ineligible for Cash
-            Transfer ("Ineligible Expenditures", as stipulated in sub-paragraph
-            2(e) of this Article X, below);
+            Transfer ("Ineligible Expenditures", as stipulated in paragraph 
+            10.2(e) of this Article, below);
           </p>
           <p>
             (v) will include the balance of any unspent funds remaining from any
@@ -835,13 +835,13 @@
           </p>
           <p>
             (vi) Support costs for organizational capacity strengthening exceeding
-            the rate referred to in Article VI, paragraph 2, of this Agreement;
+            the rate referred to in Article 6.2 of this Agreement;
           </p>
           <p>
             (vii) Expenditures that are not verifiable by records as provided in
-            Article IX of this Agreement (other than support costs for
-            organizational capacity strengthening referred to in Article VI,
-            paragraph 2 of this Agreement);
+            Article 9 of this Agreement (other than support costs for
+            organizational capacity strengthening referred to in Article 6.2 of 
+            this Agreement);
           </p>
           <p>
             (viii) Salaries for the Partner`s employees exceeding the rates
