--- a/src/etools/applications/partners/templates/pca/english_pdf.html
+++ b/src/etools/applications/partners/templates/pca/english_pdf.html
@@ -1297,7 +1297,7 @@
             party`s work, employees or other personnel, or subcontractors.
           </p>
           <p>
-            (v) "<span class="underline"></span>" is conduct by a party’s employees, personnel or
+            (v) "<span class="underline">safeguarding violation</span>" is conduct by a party’s employees, personnel or
             subcontractors that actually or likely causes harm to a person, including
             any kind of physical, emotional or sexual abuse, neglect or exploitation.
           </p>
