--- a/src/etools/applications/partners/templates/pca/english_pdf.html
+++ b/src/etools/applications/partners/templates/pca/english_pdf.html
@@ -39,7 +39,7 @@
         <style type="text/css">
           #content {
             font-size: 11pt;
-            font-family: "Calibri", serif;
+            font-family: "Times New roman", serif;
             text-align: justify;
           }
 
