--- a/src/etools/applications/partners/templates/pca/arabic_pdf.html
+++ b/src/etools/applications/partners/templates/pca/arabic_pdf.html
@@ -42,35 +42,13 @@
         <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
         <style type="text/css">
           body {
-            font-family: "Times_New_Roman";
-            text-align: right;
+            font-family: "Times New Roman", serif;
+
           }
 
           #content {
             font-size: 11pt;
-          }
-
-          @font-face {
-              font-family: "Times_New_Roman";
-              src: url("{{font_path}}times_new_roman/Times_New_Roman.ttf");
-          }
-          @font-face {
-              font-family: "Times_New_Roman";
-              src: url("{{font_path}}times_new_roman/Times_New_Roman_Italic.ttf");
-              font-weight: normal;
-              font-style: italic;
-          }
-          @font-face {
-              font-family: "Times_New_Roman";
-              src: url("{{font_path}}times_new_roman/Times_New_Roman_Bold.ttf");
-              font-weight: bold;
-              font-style: normal;
-          }
-          @font-face {
-              font-family: "Times_New_Roman";
-              src: url("{{font_path}}times_new_roman/Times_New_Roman_Bold_Italic.ttf");
-              font-weight: bold;
-              font-style: italic;
+            text-align: justify;
           }
 
           .background-gray {
