Adapt text-align right arabic

--- a/src/etools/applications/partners/templates/pca/arabic_pdf.html
+++ b/src/etools/applications/partners/templates/pca/arabic_pdf.html
@@ -43,12 +43,11 @@
         <style type="text/css">
           body {
             font-family: "Times New Roman", serif;
-
+            text-align: right;
           }
 
           #content {
             font-size: 11pt;
-            text-align: justify;
           }
 
           .background-gray {
