Fix freanch and russian pca templates diffs

--- a/src/etools/applications/partners/templates/pca/arabic_pdf.html
+++ b/src/etools/applications/partners/templates/pca/arabic_pdf.html
@@ -125,6 +125,10 @@
           li {
             padding-bottom: 10px;
           }
+
+          .alpha-list {
+            list-style-type: lower-alpha;
+          }
         </style>
       {% endblock %}
     {% endblock %}
@@ -1079,7 +1083,7 @@
           المصالح:</span
         >
       </p>
-      <ol type="a">
+      <ol class="alpha-list">
         <li>
           يقرُّ الشريك ويضمن عدم تلقي أي موظف لدى اليونيسف أو أي منظمة تابعة لمنظومة
           الأمم المتحدة أية فائدة مباشرة أو غير مباشرة تنشأ عن هذا الاتفاق أو عن
@@ -1111,7 +1115,7 @@
         <span class="strong">مكافحة الغش وغسل الأموال وتمويل الإرهاب:</span>
       </p>
 
-      <ol type="a">
+      <ol class="alpha-list">
         <li>
           يمتثل الشريك لما يلي: (أ) الالتزام بأعلى مستويات المعايير الأخلاقية؛ و(ب)
           بذل قصارى جهده لحماية اليونيسف من الاحتيال أثناء تنفيذ الاتفاق؛ و(ج)
