--- a/src/etools/applications/partners/templates/pca/english_pdf.html
+++ b/src/etools/applications/partners/templates/pca/english_pdf.html
@@ -118,6 +118,10 @@
           li {
             padding-bottom: 10px;
           }
+
+          .alpha-list {
+            list-style-type: lower-alpha;
+          }
         </style>
       {% endblock %}
     {% endblock %}
@@ -1130,7 +1134,7 @@
           Personnel;Conflict of Interest:</span
         >
       </p>
-      <ol type="a">
+      <ol class="alpha-list">
         <li>
           The Partner represents and warrants that no official of UNICEF or of any
           United Nations System organisation has received from or on behalf of the
@@ -1170,7 +1174,7 @@
           >Combatting Fraud, Money Laundering and Financing of Terrorism:</span
         >
       </p>
-      <ol type="a">
+      <ol class="alpha-list">
         <li>
           The Partner will (a) observe the highest standard of ethics; (b) use its
           best efforts to protect UNICEF against fraud, in the performance of the
