--- a/src/etools/applications/partners/templates/pca/portuguese_pdf.html
+++ b/src/etools/applications/partners/templates/pca/portuguese_pdf.html
@@ -118,6 +118,10 @@
           li {
             padding-bottom: 10px;
           }
+
+          .alpha-list {
+            list-style-type: lower-alpha;
+          }
         </style>
       {% endblock %}
     {% endblock %}
@@ -1176,7 +1180,7 @@
           pessoal do UNICEF; conflito de interesses:</span
         >
       </p>
-      <ol type="a">
+      <ol class="alpha-list">
         <li>
           O Parceiro declara e garante que nenhum funcionário do UNICEF ou de
           qualquer organização do sistema das Nações Unidas recebeu do Parceiro ou
@@ -1218,7 +1222,7 @@
         >
       </p>
 
-      <ol type="a">
+      <ol class="alpha-list">
         <li>
           O Parceiro deverá (a) observar os mais elevados padrões éticos; (b)
           envidar os seus melhores esforços para proteger o UNICEF contra fraude, na
