--- a/src/etools/applications/partners/templates/pca/spanish_pdf.html
+++ b/src/etools/applications/partners/templates/pca/spanish_pdf.html
@@ -118,6 +118,10 @@
           li {
             padding-bottom: 10px;
           }
+
+          .alpha-list {
+            list-style-type: lower-alpha;
+          }
         </style>
       {% endblock %}
     {% endblock %}
@@ -1190,7 +1194,7 @@
           la contratación de personal de UNICEF; conflicto de intereses:
         </span>
       </p>
-      <ol type="a">
+      <ol class="alpha-list">
         <li>
           El Asociado declara y garantiza que ningún funcionario de UNICEF o de una
           organización del sistema de las Naciones Unidas ha recibido del Asociado o
@@ -1231,7 +1235,7 @@
           terrorismo:</span
         >
       </p>
-      <ol type="a">
+      <ol class="alpha-list">
         <li>
           El Asociado a) observará el máximo nivel ético; b) hará todo lo posible,
           en la ejecución del Acuerdo, para proteger a UNICEF contra el fraude; y c)
