--- a/src/etools/applications/users/templates/admin/users/realm/add_multiple.html
+++ b/src/etools/applications/users/templates/admin/users/realm/add_multiple.html
@@ -1,77 +1,54 @@
 {% extends "admin/base_site.html" %}
 {% load i18n admin_urls static admin_modify %}
 
-{% block extrastyle %}{{ block.super }}
-{{ block.super }}
-<link rel="stylesheet" type="text/css" href="{% static "admin/css/changelists.css" %}">
-{% if cl.formset %}
-<link rel="stylesheet" type="text/css" href="{% static "admin/css/forms.css" %}">
-{% endif %}
-<script type="text/javascript" src="{% url 'admin:jsi18n' %}"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script type="text/javascript">
-$(document).ready(function() {
-	var max_fields      = 10; //maximum input boxes allowed
-	var wrapper   		= $(".input_fields_wrap"); //Fields wrapper
-	var add_button      = $(".add_field_button"); //Add button ID
-
-	var x = 1;
-	$(add_button).click(function(e){ //on add input button click
-		e.preventDefault();
-		if(x < max_fields){ //max input box allowed
-			x++; //text box increment
-			$(wrapper).append('<div><label>Add Variant #' + x + ': </label><input size="50" type="text" name="variants"/><br/><a href="#" class="remove_field">Remove</a></div>');
-		}
-	});
-
-	$(wrapper).on("click",".remove_field", function(e){ //user click on remove text
-		e.preventDefault(); $(this).parent('div').remove(); x--;
-	})
-});
-</script>
-<link rel="stylesheet" type="text/css" href="/static/admin/css/base.css"/>
-<link rel="stylesheet" type="text/css" href="/static/admin/css/widgets.css"/>
-<link rel="stylesheet" type="text/css" href="/static/admin/css/forms.css"/>
-<link rel="stylesheet" type="text/css" href="/static/admin/css/global.css"/>
+{% block extrahead %}{{ block.super }}
+<script src="{% url 'admin:jsi18n' %}"></script>
+{{ media }}
 {% endblock %}
 
-{% block coltype %}flex{% endblock %}
+{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "admin/css/forms.css" %}">{% endblock %}
+
+{% block coltype %}colM{% endblock %}
 
 {% block bodyclass %}{{ block.super }} app-{{ opts.app_label }} model-{{ opts.model_name }} change-form{% endblock %}
 
-{% block breadcrumbs %}
-<div class="breadcrumbs">
-    <a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
-    &rsaquo;
-    <a href="{% url 'admin:app_list' app_label=opts.app_label %}">{{ opts.app_config.verbose_name }}</a>
-    &rsaquo;
-    <a href="{% url 'admin:multiple-realms' %}">{{ opts.verbose_name_plural|capfirst }}</a>
-    &rsaquo; Add multiple Realms
-</div>
-{% endblock %}
+{% if not is_popup %}
+    {% block breadcrumbs %}
+    <div class="breadcrumbs">
+        <a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
+        &rsaquo;
+        <a href="{% url 'admin:app_list' app_label=opts.app_label %}">{{ opts.app_config.verbose_name }}</a>
+        &rsaquo;
+        <a href="{% url opts|admin_urlname:'changelist' %}">{{ opts.verbose_name_plural|capfirst }}</a>
+        &rsaquo; Add multiple Realms
+    </div>
+    {% endblock %}
+{% endif %}
 
 {% block content %}
-<br/><br/>
-<div>
-    <div id="dashboard" class="module aligned">
+<div id="content-main">
+    {% block object-tools %}
+        {% if change %}{% if not is_popup %}
+          <ul class="object-tools">
+            {% block object-tools-items %}
+              {% change_form_object_tools %}
+            {% endblock %}
+          </ul>
+        {% endif %}{% endif %}
+    {% endblock %}
 
-        <div class="form-row"></div>
-        <h2>Users: </h2>
-        {% if users %}
-            <div class="form-row">
-            </div>
-        {% endif %}
-    </div>
-</div>
-
-<div>
     <div id="module aligned" class="module aligned">
         <form action="{{ form_url }}" method="post" id="{{ opts.model_name }}_form">{% csrf_token %}
-                <br/>
-                <br/>
-                <div class="submit-row">
-                    <input type="submit" value="{% trans 'Save' %}"  name="_save_realms" />
-                </div>
+            {% block field_sets %}
+                {% for fieldset in adminform %}
+                  {% include "admin/includes/fieldset.html" %}
+                {% endfor %}
+            {% endblock %}
+            <br/>
+            <br/>
+            <div class="submit-row">
+                <input type="submit" value="{% trans 'Save' %}"  name="_save_realms" />
+            </div>
         </form>
     </div>
 </div>
