--- a/src/etools/applications/users/templates/admin/users/realm/change_list.html
+++ b/src/etools/applications/users/templates/admin/users/realm/change_list.html
@@ -1,7 +1,9 @@
 {% extends "admin/change_list.html" %} {% load i18n %}
 {% block object-tools-items %}
     {{ block.super }}
+    {% if has_add_permission %}
     <li>
         <a class="addlink" href="{% url 'admin:multiple-realms' %}">{% trans 'Add multiple realms' %}</a>
     </li>
+    {% endif %}
 {% endblock %}
