Fix texts on PCA templates

--- a/src/etools/applications/partners/templates/pca/portuguese_pdf.html
+++ b/src/etools/applications/partners/templates/pca/portuguese_pdf.html
@@ -1222,9 +1222,9 @@
         >
       </p>
 
-      <ol class="alpha-list">
+      <ol style="list-style-type: none;">
         <li>
-          O Parceiro deverá (a) observar os mais elevados padrões éticos; (b)
+          a. O Parceiro deverá (a) observar os mais elevados padrões éticos; (b)
           envidar os seus melhores esforços para proteger o UNICEF contra fraude, na
           execução do Acordo; e (c) cumprir as disposições aplicáveis da Política de
           Proibição e Combate à Fraude e à Corrupção do UNICEF, disponível em
@@ -1240,7 +1240,7 @@
           e à Corrupção do UNICEF e seguidamente descritos.
         </li>
         <li>
-          O Parceiro declara e garante que nem ele nem nenhuma das suas afiliadas,
+          b. O Parceiro declara e garante que nem ele nem nenhuma das suas afiliadas,
           pessoal ou diretores, está sujeito a qualquer sanção ou suspensão
           temporária imposta por qualquer organização do sistema das Nações Unidas
           ou por outra organização intergovernamental internacional. O Parceiro
@@ -1249,7 +1249,7 @@
           sanção ou suspensão temporária durante o período de vigência do Acordo.
         </li>
         <li>
-          De acordo com as resoluções do Conselho de Segurança das Nações Unidas
+          c. De acordo com as resoluções do Conselho de Segurança das Nações Unidas
           relativas ao terrorismo e, em particular, ao financiamento do terrorismo,
           as Partes procurarão assegurar que os recursos ou qualquer outro apoio
           recebido no âmbito do Acordo, quer seja numerário ou contribuições em
@@ -1276,7 +1276,7 @@
           dinheiro e ao Financiamento do Terrorismo (AML/FT) do UNICEF.
         </li>
         <li>
-          O Parceiro compromete-se a levar imediatamente à atenção do Representante
+          d. O Parceiro compromete-se a levar imediatamente à atenção do Representante
           UNICEF ou do diretor do Gabinete de Auditoria Interna e Investigação do
           UNICEF (<a href="mailto:integrity1@unicef.org">integrity1@unicef.org</a>)
           as alegações de conduta corrupta, fraudulenta, colusiva, coerciva ou
