--- a/src/etools/applications/partners/templates/pca/spanish_pdf.html
+++ b/src/etools/applications/partners/templates/pca/spanish_pdf.html
@@ -1235,9 +1235,9 @@
           terrorismo:</span
         >
       </p>
-      <ol class="alpha-list">
+      <ol style="list-style-type: none;">
         <li>
-          El Asociado a) observará el máximo nivel ético; b) hará todo lo posible,
+          a. El Asociado a) observará el máximo nivel ético; b) hará todo lo posible,
           en la ejecución del Acuerdo, para proteger a UNICEF contra el fraude; y c)
           cumplirá las disposiciones aplicables de la Política de UNICEF de
           prohibición y lucha contra el fraude y la corrupción, disponible en
@@ -1253,7 +1253,7 @@
           detalla más abajo.
         </li>
         <li>
-          El Asociado declara y garantiza que ni él ni ninguna de sus filiales, de
+          b. El Asociado declara y garantiza que ni él ni ninguna de sus filiales, de
           los miembros de su personal o de sus directores está sujeto a una sanción
           o suspensión temporal impuesta por una organización del sistema de las
           Naciones Unidas u otra organización intergubernamental internacional. El
@@ -1263,7 +1263,7 @@
           Acuerdo.
         </li>
         <li>
-          De conformidad con las resoluciones del Consejo de Seguridad de las
+          c. De conformidad con las resoluciones del Consejo de Seguridad de las
           Naciones Unidas relativas al terrorismo y, en particular, a la
           financiación del terrorismo, las Partes se asegurarán de que los recursos
           o cualquier otro tipo de apoyo recibido en virtud del Acuerdo, ya sea en
@@ -1289,7 +1289,7 @@
           financiación del terrorismo.
         </li>
         <li>
-          El Asociado acepta presentar sin demora las denuncias de conducta
+          d. El Asociado acepta presentar sin demora las denuncias de conducta
           corrupta, fraudulenta, colusoria, coercitiva u obstructiva que surjan en
           relación con este Acuerdo y de las que haya sido informado o haya tenido
           conocimiento ante el representante de oficina de UNICEF o el Director de
