Fix between dates text

--- a/src/etools/applications/partners/templates/pca/french_pdf.html
+++ b/src/etools/applications/partners/templates/pca/french_pdf.html
@@ -229,7 +229,7 @@
         1.7 On entend par « <span class="underline">programme</span> » le plan stratégique 
         ou programme de pays de l’UNICEF pour {{ country }} approuvé par le Conseil 
         d’administration de l’UNICEF pour la période {{ cp.from_date|date:"Y" }} 
-        to {{ cp.to_date|date:"Y" }}, y compris ses éventuelles prorogations.
+        à {{ cp.to_date|date:"Y" }}, y compris ses éventuelles prorogations.
       </p>
       <p>
         1.8 On entend par « <span class="underline">document de programme</span> » le
